--- a/Web/src/main/resources/static/index.html
+++ b/Web/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="container">
-    <h2 align="center">Home</h2>
+    <h2 align="center">Accounts and Transactions</h2>
     <div align="center">
         Content here
     </div>
