--- a/DataViewer/src/main/resources/static/index.html
+++ b/DataViewer/src/main/resources/static/index.html
@@ -15,15 +15,46 @@
 <div class="container">
     <h2 align="center">Accounts and Transactions</h2>
     <div align="center">
-        Content here
+        <div class="alert alert-danger collapse" role="alert" id="errorMessage">
+
+        </div>
+    </div>
+    <div align="center">
+        <label for="customerId">Get data by Customer ID</label>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon3">Customer ID:</span>
+            </div>
+            <input type="text" class="form-control" id="customerId" aria-describedby="basic-addon3">
+            <div class="input-group-append">
+                <button type="button" id="btnGetCustomerData" class="btn btn-primary">Get</button>
+            </div>
+        </div>
+    </div>
+    <div id="data" class="collapse">
+        <hr/>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <b><label for="custId">Customer ID: </label></b>
+                    <span id="custId"></span>
+                </div>
+                <div class="col-sm">
+                    <b><label for="customerBalance">Total balance: </label></b>
+                    <span id="customerBalance"></span>
+                </div>
+            </div>
+        </div>
+        <hr/>
+        <div class="accordion" id="accountsTable" align="center">
+
+        </div>
     </div>
 </div>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"
         integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
         crossorigin="anonymous"></script>
